# termboxd

./: .gitignore  Cargo.toml  README.md
src/: log.rs  main.rs  movies.rs  parser.rs  ui.rs  user.rs
src/ui/: app.rs  lists.rs  mod.rs  profile.rs  visualizer.rs
