[package]
name = "termboxd"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
csv = "1.4.0"
image = "0.25.10"
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
reqwest = {version = "0.13.4", features = ["blocking"] }
serde = {version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tmdb_client = "1.8.0"
